--- a/about/index.html
+++ b/about/index.html
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-  <rss xmlns:atom="http://www.w3.org/2005/Atom" xmlns:content="http://purl.org/rss/1.0/modules/content/" xmlns:media="http://search.yahoo.com/mrss/" xmlns:wfw="http://wellformedweb.org/CommentAPI/" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:sy="http://purl.org/rss/1.0/modules/syndication/" xmlns:slash="http://purl.org/rss/1.0/modules/slash/" version="2.0">
+<rss version="2.0">
+
     <channel>
     <title>The News Lens 關鍵評論網</title>
     <link>http://www.thenewslens.com/feed/mailchimp/daily</link>
