--- a/about/index.html
+++ b/about/index.html
@@ -1,59 +1,21 @@
-<?xml version="1.0" encoding="UTF-8" ?>
-<rss version="2.0">
+<!DOCTYPE html>
+<html>
+<head>
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-PTWSXPD');</script>
+  <!-- End Google Tag Manager -->
+<title>BYE TEST</title>
+</head>
+<body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PTWSXPD"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+<p>BYE</p>
 
-<channel>
-  <title>The News Lens 關鍵評論網</title>
-<link>http://www.thenewslens.com/feed/mailchimp/daily</link>
-<description>
-<![CDATA[ 如何辨識三大法人、公司派與大戶？主力會用什麼手法躲避散戶追蹤？ ]]>
-</description>
-<atom:link href="http://www.thenewslens.com/feed/mailchimp/daily" rel="self"/>
-<language>zh-tw</language>
-<lastBuildDate>Mon, 28 Sep 2020 16:09:19 +0800</lastBuildDate>
-<item>
-<title>如何辨識三大法人、公司派與大戶？主力會用什麼手法躲避散戶追蹤？</title>
-<category>
-<![CDATA[ 財經 ]]>
-</category>
-<category>
-<![CDATA[ 投資 ]]>
-</category>
-<category>
-<![CDATA[ 外商 ]]>
-</category>
-<category>
-<![CDATA[ 理財 ]]>
-</category>
-<category>
-<![CDATA[ 大戶 ]]>
-</category>
-<category>
-<![CDATA[ 股票 ]]>
-</category>
-<category>
-<![CDATA[ 三大法人 ]]>
-</category>
-<category>
-    <![CDATA[ 公司派 ]]>
-</category>
-<category>    
-<![CDATA[ 主力 ]]>
-</category>
-<category>
-<![CDATA[ 散戶 ]]>
-</category>
-<link>https://www.thenewslens.com/article/141004</link>
-<guid isPermaLink="true">https://www.thenewslens.com/article/141004</guid>
-<description>
-<![CDATA[ 大戶會利用聲東擊西（在A分點劵商買進，從B、C、D分點劵商賣出），或假扮外資從國外劵商操作股票，來躲避散戶的追蹤。 ]]>
-</description>
-<content:encoded>
-<![CDATA[ 大戶會利用聲東擊西（在A分點劵商買進，從B、C、D分點劵商賣出），或假扮外資從國外劵商操作股票，來躲避散戶的追蹤。 ]]>
-</content:encoded>
-<dc:creator xmlns:dc="http://purl.org/dc/elements/1.1/">豹投資</dc:creator>
-<pubDate>Mon, 28 Sep 2020 16:00:53 +0800</pubDate>
-<media:content url="https://image2.thenewslens.com/2017/1/o8hrrck10xzbxd1aetvk6q3tjc0s6s.jpg?auto=compress&updated_at=2017-01-11-17-29-56&w=580" medium="image"/>
-</item>
-</channel>
-
-</rss>
+</body>
+</html>
