--- a/about/index.html
+++ b/about/index.html
@@ -5,6 +5,20 @@
   <link rel="manifest" href="/manifest.json"/>
   <!-- <link rel="manifest" href="manifest.json"> -->
 
+  <script>
+	// Initialize Firebase
+	  var config = {
+		apiKey: "AIzaSyBarEbp2tYT_kucTti2Vjk0LiT2qLlr7d4",
+		authDomain: "webpush-1166e.firebaseapp.com",
+		databaseURL: "https://webpush-1166e.firebaseio.com",
+		projectId: "webpush-1166e",
+		storageBucket: "webpush-1166e.appspot.com",
+		messagingSenderId: "1045809670811",
+		appId: "1:1045809670811:web:cce45c0fc1bca1ae35f43e",
+		measurementId: "G-SYQLGSYD4L"
+	};
+  firebase.initializeApp(config);
+  </script>
 
   <script>
     // Retrieve Firebase Messaging object.
