--- a/about/index.html
+++ b/about/index.html
@@ -2,6 +2,7 @@
 <head>
   <title>Look24 :: Cloud Messaging Notification</title>
   <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-analytics.js"></script>></script>
   <link rel="manifest" href="/manifest.json"/>
   <!-- <link rel="manifest" href="manifest.json"> -->
 
