--- a/about/index.html
+++ b/about/index.html
@@ -47,8 +47,7 @@
             console.log(currentToken);
             setTokenSentToServer(true);
             // token存至firebase
-            var id = currentToken.split(':')[0];
-            firebase.database().ref('pushUsers/' + id).set({'token': currentToken});
+            firebase.database().ref('pushUsers/' + currentToken).set({'token': currentToken});
           } else {
             // Show permission request.
             //console.log('No Instance ID token available. Request permission to generate one.');
