--- a/about/index.html
+++ b/about/index.html
@@ -78,7 +78,8 @@
         body: payLoad.notification.body,
         icon: payLoad.notification.icon,
       };
-      var notification = new Notification(notificationTitle, notificationOptions);
+      alert(notification,notificationOptions);
+      // var notification = new Notification(notificationTitle, notificationOptions);
     });
   </script>
 </head>
