--- a/about/index.html
+++ b/about/index.html
@@ -78,7 +78,7 @@
         body: payLoad.notification.body,
         icon: payLoad.notification.icon,
       };
-      alert(notification,notificationOptions);
+      alert(notificationTitle,notificationOptions);
       // var notification = new Notification(notificationTitle, notificationOptions);
     });
   </script>
