--- a/about/index.html
+++ b/about/index.html
@@ -78,8 +78,8 @@
         body: payLoad.notification.body,
         icon: payLoad.notification.icon,
       };
-      alert(notificationTitle,notificationOptions);
-      // var notification = new Notification(notificationTitle, notificationOptions);
+      // alert(notificationTitle,notificationOptions);
+      var notification = new Notification(notificationTitle, notificationOptions);
     });
   </script>
 </head>
