recaptcha callback function

--- a/about/index.html
+++ b/about/index.html
@@ -1,13 +1,56 @@
 <html>
-  <head>
-    <title>reCAPTCHA demo: Simple page</title>
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-  </head>
-  <body>
-    <form action="?" method="POST">
-      <div class="g-recaptcha" data-sitekey="6Lf7phMgAAAAAE5NTffUfkuurKHPq-QQ2Z1cYViU"></div>
-      <br/>
-      <input type="submit" value="Submit">
-    </form>
-  </body>
+
+<head>
+  <title>reCAPTCHA demo: Simple page</title>
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+</head>
+
+<body>
+  <form action="?" method="POST">
+    <div class="g-recaptcha" data-sitekey="6Lf7phMgAAAAAE5NTffUfkuurKHPq-QQ2Z1cYViU" data-theme="dark"
+      data-size="normal" data-callback="verifyCallback" data-expired-callback="expired" data-error-callback="error">
+    </div>
+    <br />
+    <input type="submit" value="Submit">
+  </form>
+
+  <script>
+
+    var uriGAS = 'https://script.google.com/macros/s/AKfycbxasocS8139fmLxSRxaZwdJCqAojaXNO9_M-wN3AbIJck5-2wffuS6Hn-ULCFHCug2Y/exec';
+
+    // 方法 1：reCAPTCHA 送到後端做驗證
+    function verifyCallback(token) {
+
+      var formData = new FormData();
+      formData.append('token', token);
+
+      fetch(uriGAS, {
+          method: "POST",
+          body: formData
+        }).then(response => response.json())
+        .then(result => {
+          if (result.success) {
+            document.getElementById('verify').classList.remove('none');
+          } else {
+            window.alert(result['error-codes'][0])
+          }
+        })
+        .catch(err => {
+          window.alert(err)
+        })
+    }
+
+    // 過期要做的事
+    function expired(ex) {
+      window.alert('reCAPTCHA 驗證程序到期')
+    }
+
+    // 失敗要做的事
+    function error(err) {
+      window.alert('reCAPTCHA 驗證失敗')
+    }
+  </script>
+
+</body>
+
 </html>
