add success elem

--- a/about/index.html
+++ b/about/index.html
@@ -12,6 +12,8 @@
     </div>
     <br />
     <input type="submit" value="Submit">
+
+    <h3 class="none" id="verify">驗證成功！</h3>
   </form>
 
   <script>
