remove post to google method

--- a/about/index.html
+++ b/about/index.html
@@ -17,9 +17,8 @@
   </form>
 
   <script>
-    var uriGAS =
-      'https://script.google.com/macros/s/AKfycbxasocS8139fmLxSRxaZwdJCqAojaXNO9_M-wN3AbIJck5-2wffuS6Hn-ULCFHCug2Y/exec';
-    var uriRecaptcha = 'https://www.google.com/recaptcha/api/siteverify';
+
+    var uriGAS = 'https://script.google.com/macros/s/AKfycbxasocS8139fmLxSRxaZwdJCqAojaXNO9_M-wN3AbIJck5-2wffuS6Hn-ULCFHCug2Y/exec';
 
     // 方法 1：reCAPTCHA 送到後端做驗證
     function verifyCallback(token) {
@@ -27,13 +26,9 @@
       var formData = new FormData();
       formData.append('token', token);
 
-      var data = {
-        secret: '6Lf7phMgAAAAABYQ4f3TUdv82slQ3mKZT6gW1f_g',
-        response: token
-      }
-      fetch(uriRecaptcha, {
+      fetch(uriGAS, {
           method: "POST",
-          body: data
+          body: formData
         }).then(response => response.json())
         .then(result => {
           if (result.success) {
