update dday style

--- a/about/index.html
+++ b/about/index.html
@@ -4,13 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
     <link rel="stylesheet" href="flipclock.css" />
     <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor | Launch countdown timer</title>
@@ -18,19 +11,8 @@
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   </head>
   <body>
-    <h3>We're launching soon</h3>
+    <h3>Traget Launch Date</h3>
     <div class="clock"></div>
-    <div class="social">
-      <div class="fb">
-        <img src="./images/icon-facebook.svg" alt="fb" />
-      </div>
-      <div class="pin">
-        <img src="./images/icon-pinterest.svg" alt="pin" />
-      </div>
-      <div class="insta">
-        <img src="./images/icon-instagram.svg" alt="insta" />
-      </div>
-    </div>
     <script src="flipclock.js"></script>
 
   </body>
